# kongo

./: .dockerignore  .gitignore  Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  compose.yaml  docker-compose.yaml  kongodb.env
.github/workflows/: build.yaml
admin-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
admin-ui/src/: App.jsx  styles.css
admin-ui/src/components/: AuditLogsPanel.jsx  DbCrudConsole.jsx  DocumentUiEditor.jsx  FullTextSearchPanel.jsx  GlobalAdminPanel.jsx  JsonEditor.jsx  Layout.jsx  MetricsEventsConsole.jsx  ResponsePanel.jsx  SettingsPanel.jsx  Sidebar.jsx  SystemCatalogPanel.jsx  SystemMetricsPanel.jsx  Toast.jsx  WelcomePage.jsx
admin-ui/src/context/: AdminContext.jsx
admin-ui/src/lib/: api.js  format.js  presets.js  results.js
scripts/: clean-smoke.sh  docker-entrypoint.sh  run-local.sh  smoke-audit-logs.sh  smoke-auth.sh  smoke-backup.sh  smoke-export-import-zst.sh  smoke-fts-jobs.sh  smoke-identity.sh  smoke-import-jobs.sh  smoke-import-s3.sh  smoke-lookup-edge.sh  smoke-metric-events.sh  smoke-replication-jobs.sh  smoke-safe-hydrate.sh  smoke-snapshot.sh  smoke.sh
src/: config.rs  error.rs  main.rs  state.rs
src/api/: dto.rs  handlers.rs  mod.rs  router.rs
src/query/: jql.rs  mod.rs
src/service/: dispatcher.rs  mod.rs
src/service/dispatcher/: archive_ops.rs  audit_logs_ops.rs  db_ops.rs  file_ops.rs  identity_ops.rs  jobs_ops.rs  lookup_support.rs  query_support.rs  (+5 more)
src/storage/: auto_index.rs  backup.rs  db_path.rs  local.rs  manager.rs  mod.rs  reaper.rs  schema.rs  system_catalog.rs
(+7 files in other folders)
