[package]
name = "kongo"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1", features = ["v4", "v7"] }
libsql = { version = "0.9", features = ["core"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "cors", "fs"] }
async-trait = "0.1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-types = "1"
chrono = { version = "0.4", features = ["clock"] }
sha2 = "0.10"
petgraph = "0.6"
async-recursion = "1"
zstd = "0.13"
pulldown-cmark = "0.12"
memory-stats = "1.2"
